# fastapi-finance-monitor

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  FINAL_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  PROJECT_ENHANCEMENTS_SUMMARY.md  README.md  check_content.py  check_content2.py  debug_dashboard.py  debug_registration.py  demonstrate_indicators.py  docker-compose.yml  fix_dashboard.py  fix_dashboard2.py  fix_indentation.py  fix_main.py  http_debug.py  minimal_app.py  minimal_test.py  prometheus.yml  pydantic_core-2.18.4-cp312-none-win_amd64.whl  pyproject.toml  pytest.ini  redis.conf  requirements.txt  run.py  run_tests.py  simulate_request.py  test_custom_exceptions.py  test_dashboard.py  test_exception_middleware.py  test_functionality.py  test_registration.py  test_routes.py  test_routes2.py  (+1 more)
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20251123_01_initial_schema.py  20260325_02_add_telegram_connection.py  20260325_03_add_refresh_tokens_table.py  20260325_04_add_2fa_fields_to_users.py
app/: alert_models.py  config.py  database.py  main.py  models.py
app/api/: enhanced_routes.py  routes.py  telegram_webhook.py  websocket.py
app/exceptions/: custom_exceptions.py
app/managers/: connection_manager.py  data_manager.py  subscription_manager.py
app/middleware/: exception_handler_middleware.py  monitoring_middleware.py  rate_limit_middleware.py
app/models/: __init__.py
app/services/: advanced_alert_service.py  alert_service.py  auth_manager.py  auth_service.py  cache_manager.py  cache_service.py  data_fetcher.py  data_sources_registry.py  database_service.py  delta_manager.py  enhanced_data_fetcher.py  indicators.py  lru_cache.py  metrics_collector.py  monitoring_service.py  portfolio_service.py  redis_cache_service.py  telegram_service.py  two_factor_auth_service.py  watchlist.py
app/services/tests/: test_data_fetcher_new_types.py
app/tests/: test_2fa_auth.py  test_advanced_alert_service.py  test_advanced_portfolio_analytics.py  test_alert_endpoints.py  test_alert_service.py  test_auth_manager.py  test_auth_service.py  test_cache_manager.py  test_cache_service.py  test_custom_exceptions.py  test_data_fetcher.py  test_data_fetcher_enhanced.py  test_data_fetcher_enhanced_errors.py  test_delta_manager.py  test_email_verification.py  test_enhanced_cache_service.py  test_enhanced_indicators.py  test_enhanced_portfolio.py  test_export_enhanced.py  test_export_functionality.py  test_historical_data.py  test_main_application.py  test_metrics_collector.py  test_monitoring_service.py  test_portfolio_endpoints.py  test_portfolio_service.py  test_rate_limiting.py  test_redis_cache_service.py  test_refresh_tokens.py  test_registration.py  test_services.py  test_watchlist.py  test_websocket_enhanced.py
app/utils/: __init__.py  types.py  yfinance_safe.py
grafana/provisioning/dashboards/: dashboard.yml
memory/: MEMORY.md
nginx/: nginx.conf
scripts/: init-db.sql
