[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-finance-monitor"
version = "1.0.0"
description = "Real-time financial dashboard for stocks, crypto, and commodities"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Дуплей Максим Игоревич", email = "maksimqwe42@mail.ru"}
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function call in argument defaults
    "B904",   # raise ... from err (слишком многословно для логируемых исключений)
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "TC001",  # Move import into TYPE_CHECKING block
    "TC002",  # Move import into TYPE_CHECKING block
    "TC003",  # Move import into TYPE_CHECKING block
    "E402",   # Module level import not at top (sys.path manipulation)
    "RUF001", # Ambiguous unicode (кириллица намеренная)
    "RUF002", # Docstring contains ambiguous characters (Cyrillic is intentional)
    "PTH100", # os.path.abspath -> Path.resolve (compatibility)
    "PTH120", # os.path.dirname -> Path.parent (compatibility)
    "SIM102", # Nested if statements (читаемость)
    "SIM105", # contextlib.suppress (не всегда улучшает читаемость)
    "SIM117", # Nested with statements (читаемость)
    "UP038",  # isinstance with tuple (совместимость с Python < 3.10)
    "F841",   # Unused variable (некоторые используются для clarity)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
"app/tests/**" = ["ARG", "S101"]  # Tests can have unused args and use assert

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.14"
warn_return_any = false  # Отключено из-за SQLAlchemy
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false  # Отключено для совместимости
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false  # Слишком много ложных срабатываний
warn_no_return = false
warn_unreachable = false  # Отключено из-за asyncio patterns
strict_equality = false
exclude = [
    'venv',
    '__pycache__',
    'build',
    'dist',
    'tests',
    'app/tests',
]

[tool.bandit]
exclude_dirs = [
    "tests",
    "app/tests",
    "venv",
    ".venv",
]
skips = [
    "B101",  # assert_used - допустимо в тестах
    "B601",  # paramiko_calls - если используется
]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "app/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
